# asset-license-dev-demo

./: README.MD  docker-compose.yml
backend/: .python-version  Dockerfile  LICENSE  pyproject.toml
backend/src/asset_manager/: deps.py  main.py
backend/src/asset_manager/data/: fixtures.json  init_db.py
backend/src/asset_manager/data/exceptions/: __init__.py  base.py
backend/src/asset_manager/data/repos/: assets.py  base.py  developers.py  exceptions.py  license.py
backend/src/asset_manager/data/schemas/: asset.py  base.py  developer.py  license.py
backend/src/asset_manager/data/services/: developer.py
backend/src/asset_manager/models/: auth.py  models.py  responses.py
backend/src/asset_manager/routers/: api_v1.py  auth.py
backend/src/asset_manager/routers/endpoints/: assets.py  developers.py  license.py
backend/src/asset_manager/utils/: exc_handlers.py  security.py  settings.py
backend/tests/: test_asset_manager.py
frontend/: .dockerignore  .env.docker  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/modules/assets/: index.jsx
frontend/src/modules/auth/: index.jsx
frontend/src/modules/developers/: index.jsx
frontend/src/modules/licenses/: index.jsx
frontend/src/utils/: api.ts
