[tool.poetry]
name = "asset-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
python-multipart = "^0.0.5"
jose = "^1.0.0"
python-jose = "^3.3.0"
pymongo = "^3.12.0"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "asset_manager.main:start"

[tool.black]
line-length = 79
